# ottomator-agents

./: .gitignore
.github/workflows/: daily-crypto-report.yml
crypto-btc-report-app/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
crypto-btc-report-app/data/: latest_report.json
crypto-btc-report-app/public/: index.html
crypto-btc-report-app/src/crypto_btc_report/: builder.py  config.py  generate.py  news.py  price.py  scheduler.py  summarizer.py  web.py
crypto-btc-report-app/src/crypto_btc_report.egg-info/: SOURCES.txt
crypto-btc-report-app/templates/: report.html
