[project]
name = "crypto-btc-report"
version = "0.1.0"
description = "Daily BTC intelligence report web app"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
